# fast-ray-gram

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh  invoice-worker.sh
docs/: frontend-roadmap.md  frontend.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  global.css  main.tsx  types.ts
frontend/src/components/: AdminPageLayout.tsx  AppSidebarMenu.tsx  AsyncListState.tsx  CopyableInput.tsx  HintTooltip.tsx  InvoiceCard.tsx  LookupActionForm.tsx  PaginationFooter.tsx  ProfileResultPage.tsx  RequireAdmin.tsx  SectionCard.tsx  ServiceStatusBanner.tsx  ThemeFooterControls.tsx  ThemeToggle.tsx  ThemedIconAvatar.tsx  UserCard.tsx  UserLookupPanel.tsx  XuiClientCard.tsx
frontend/src/config/: navigation.ts
frontend/src/hooks/: useCopyToClipboard.ts  useMediaQuery.ts  useServiceStatus.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: ForbiddenPage.tsx  LoginPage.tsx  MonitoringPage.tsx  PaymentFailPage.tsx  PaymentSuccessPage.tsx  PaymentsPage.tsx  ProfilePage.tsx  UsersPage.tsx
src/api/: admin.py  frontend.py  meta.py  root.py  tw.py  user.py  xui.py
src/core/: cache.py  deps.py  enums.py  handlers.py  logger.py  settings.py
src/models/: common.py  tw.py  users.py  xui.py
src/schemas/: __init__.py  base.py  invoices.py  users.py
src/services/: db.py  jwt.py  tw.py  users.py  xui.py
src/static/: index.html  styles.css
(+16 files in other folders)
